Fix squeezed Bitmap fill style tab page layout in Background tab page

Just use the size set by the Area tab page class

Change-Id: Ie87b4e86a3c80e94f6d916dab217e52c82558074
Reviewed-on: https://gerrit.libreoffice.org/66650
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit db4c828913cfc8c33b8cc87b576fddcc2e705176)

Resolves: tdf#124058 factor bitmap page into size req when its toggled on

post ctor time

Change-Id: I8257c8ffdfc4dab9893ab7d2d67e218dd3f8097c

don't need m_aColorSize

Change-Id: I27740ae0bff0d1676799ddfba76eab5e7a299f66